--- a/assets/css/faq-stylesheet.css
+++ b/assets/css/faq-stylesheet.css
@@ -6,7 +6,7 @@ nav {
 	background: #1D3557;
 	height: 60px;
 	border-radius: 0!important;
-		
+
 }
 .navigation, .navbar-right {
 	margin-top: 6px;
@@ -42,16 +42,11 @@ nav {
 .navbar-toggle .icon-bar {
 	background-color: #1D3557;
 }
-.navbar-brand>img {
-	display: inline;
-}
-#home-icon {
-	margin-top: -5px;
+.fa-icon-style{
+	 color:transparent;
+	 -webkit-text-stroke :1px white;
 }
 
-#contact-icon {
-	margin-top: -3px
-}
 #signup {
 	background: #FFFFFF;
 	box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.25);
@@ -85,62 +80,6 @@ nav {
 	border: transparent;
 	border-bottom: 3px solid #1D3557;
 }
-#policy-tab {
-	padding-top: 60px;
-	padding-bottom: 30px;
-}
-.privacy-text {
-	font-size: 48px;
-	color: #3386B2;
-}
-.details {
-	margin-top: 30px;
-	font-size: 24px;
-	text-align: justify;
-	color: #222222;
-}
-#privacy-footer {
-	background: #FCFCFC;
-	padding-top: 40px;
-}
-.company {
-	font-size: 24px;
-	color: #333333;
-}
-.footer-components {
-	margin-top: 30px;
-	margin-bottom: 40px;
-}
-.footer-components>p>a {
-	line-height: 16px;
-	font-size: 20px;
-	color: rgba(79, 79, 79, 0.91);
-}
-#copyright-div {
-	background: #4F4F4F;
-	padding: 30px 0;
-}
-#copy {
-	font-size: 20px;
-	color: #FFFFFF;
-	margin-left: 50px;
-	margin-top: 10px;
-}
-#footer-icons>a {
-	margin-right: 10px;
-}
-#footer-icons>a>img {
-	display: inline;
-}
-#wrap {
-	position: absolute;
-	width: 414px;
-	height: 0px;
-	left: 513px;
-	top: 382px;
-	text-align: center;
-}
-
 #faq-heading{
 	padding: 20px; 
 
@@ -159,27 +98,11 @@ nav {
 .accordion-buttons{
 	padding-right: 100px; 
 	padding-left: 100px;
-
 }
 #search-box{
 	margin: 0px;
 	padding: 5%;
 }
-#search-box .float-center form button{
-	margin:0px; z-index :10; position: absolute; right: 0px ; top: 0px;
-}
-
-.lineinput  {
-	border-bottom: 2px solid #457B9D;
-	border-left: transparent;
-	border-top: transparent;
-	border-right: transparent;
-	background-color: transparent;
-}
-.lineinput button {
-	margin:0px; z-index :10; position: absolute; right: 0px ; top: 0px;
-}
-
 .btn-pane{
 	background-color: #eee;
 	color: #444;
@@ -262,5 +185,55 @@ nav {
 .float-center form{
 	position: relative;
 	left: 50%;
+}
+.float-center form input, 
+.float-center form button  {
+	border-bottom: 2px solid #457B9D;
+	border-left: transparent;
+	border-top: transparent;
+	border-right: transparent;
+	background-color: transparent;
+}
+.float-center form button{
+margin:0px; z-index :10; position: absolute; right: 0px;  top: 0px; 
+}
+.details {
+	margin-top: 30px;
+	font-size: 24px;
+	text-align: justify;
+	color: #222222;
+}
+#privacy-footer {
+	background: #FCFCFC;
+	padding-top: 40px;
+}
+.company {
+	font-size: 24px;
+	color: #333333;
+}
+.footer-components {
+	margin-top: 30px;
+	margin-bottom: 40px;
+}
+.footer-components>p>a {
+	line-height: 16px;
+	font-size: 20px;
+	color: rgba(79, 79, 79, 0.91);
+}
+#copyright-div {
+	background: #4F4F4F;
+	padding: 30px 0;
+}
+#copy {
+	font-size: 20px;
+	color: #FFFFFF;
+	margin-left: 50px;
+	margin-top: 10px;
+}
+#footer-icons>a {
+	margin-right: 10px;
+}
+#footer-icons>a>img {
+	display: inline;
 }
 
